--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           service-id: ${{ secrets.POKEDEX_RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
-      - run: echo '$CONDITION'
+      - run: echo "$CONDITION"
   tag_release:
     if: ${{ github.env.CONDITION == 'true' }}
     needs: [simple_deployment_pipeline]
