Fix no curly braces

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,14 +40,14 @@ jobs:
           api-key: ${{ secrets.RENDER_API_KEY }}
       - name: Test Success
         uses: rjstone/discord-webhook-notify@v1.0.4
-        if: success()
+        if: ${{ success() }}
         with:
           text: A new version of Pokedex deployed
           severity: info
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Test Failure
         uses: rjstone/discord-webhook-notify@v1.0.4
-        if: failure()
+        if: ${{ failure() }}
         with:
           text: Build failed
           severity: error
