downgrade discord webhook to v1

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,23 +38,21 @@ jobs:
         with:
           service-id: ${{ secrets.POKEDEX_RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
-      - name: Test Info
-        uses: rjstone/discord-webhook-notify@v1.0.4
+
+      - name: Test Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ success() }}
         with:
+          text: A new version of Pokedex deployed
           severity: info
-          details: Test succeeded.
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Test Warn
-        uses: rjstone/discord-webhook-notify@v1.0.4
+
+      - name: Test Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{ failure() }}
         with:
-          severity: warn
-          details: Test warning.
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-      - name: Test Error
-        uses: rjstone/discord-webhook-notify@v1.0.4
-        with:
+          text: Build failed
           severity: error
-          details: Test error.
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
   tag_release:
