Set my name as env variable before using

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,7 +13,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
-      - run: echo "My name is ${{ github.event.head_commit.author.username }}"
+      - name: Echo my name
+        env:
+          MY_NAME: ${{ github.event.head_commit.author.username }}
+        run: echo "My name is $MY_NAME"
       - name: github context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
