--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
           title: A new version of Pokedex deployed
-          message: "to https://full-stack-open-pokedex-au14.onrender.com/ by ${{ github.event.head_commit.author.username }}"
+          message: "to https://full-stack-open-pokedex-au14.onrender.com/ by ${{ github.event.pusher.name }}"
           colour: "#00ff00"
 
       - name: Test Failure
@@ -54,7 +54,7 @@ jobs:
         with:
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
           title: Build failed
-          message: "commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :("
+          message: "commit ${{ github.event.head_commit.url }} by ${{ github.event.pusher.name }} broke the build :("
           colour: "#ff0000"
 
   tag_release:
