Schedule the health check action

--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -1,12 +1,8 @@
 name: URL Health Check
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches: [main]
-    types: [opened, synchronize]
+  schedule:
+    - cron: "*/5 * * * *"
 
 jobs:
   url_health_check:
