--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -1,8 +1,11 @@
 name: URL Health Check
 
 on:
-  schedule:
-    - cron: "*/10 * * * *"
+  push:
+    branches:
+      - main
+  # schedule:
+  #   - cron: "0 0 * * *" # runs once everyday
 
 jobs:
   url_health_check:
